# pemu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  video_resize.sh
pfba/: .gitignore  CMakeLists.txt  README.MD
pfba/data/common/datadir/: gamelist_coleco.xml  gamelist_gamegear.xml  gamelist_msx.xml  gamelist_nes.xml  gamelist_sms.xml  gamelist_tg16.xml
pfba/data/sfml/shaders/: 5xBR-v3.5.v  SABR-v1.0.v  advanced-aa.v
pfba/data/windows/: copy_deps.sh  driverlist.h  gamelist.txt
pfba/pfba/: config.cpp  config.h  main.cpp  romlist.cpp  romlist.h  ui.cpp  ui.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h
pfba/pfba/data/skin/: config.cfg  default.h  romlist_help.xcf  title.h
pfba/pfba/fba/: bzip.cpp  drv.cpp  input.cpp  memory.h  neocdlist.cpp  paths.cpp  state.cpp  tchar.h
pfba/pfba/tools/: find_m68k_drv.sh  m68k_gamelist.ods
pfba/sources/: config.cpp  config.h  main.cpp  pfbaIo.cpp  pfbaIo.h  pfba_io.h  pfba_ui_romlist_classic.cpp  pfba_ui_romlist_classic.h  romlist.cpp  romlist.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiStateMenu.cpp  video.cpp  video.h
pfba/sources/cpu/: c68000_intf.cpp
pfba/sources/fba/: burner_sdl.h  bzip.cpp  drv.cpp  paths.cpp  stringset.cpp  zipfn.cpp
pfbneo/: CMakeLists.txt  README.MD
pfbneo/android/app/: build.gradle
pfbneo/android/gradle/wrapper/: gradle-wrapper.properties
pfbneo/data/3ds/: app.rsf
pfbneo/data/common/: romlist_help.xcf
pfbneo/data/common/datadir/: gamelist_gamegear.xml  gamelist_sgx.xml
pfbneo/data/sfml/shaders/: dot.f  (+3 more)
pfbneo/data/switch/: romlist_help.xcf
pfbneo/data/windows/: driverlist.h
pfbneo/sources/: config.cpp  config.h  main.cpp  pfba_io.h  pfba_ui_romlist.cpp  pfba_ui_romlist.h  pfbneo_config.cpp  pfbneo_config.h  pfbneo_romlist.cpp  pfbneo_romlist.h  pfbneo_ui_emu.cpp  pfbneo_ui_emu.h  pfbneo_ui_menu.cpp  pfbneo_ui_menu.h  pfbneo_ui_menu_state.cpp  pfbneo_ui_menu_state.h  pfbneo_ui_video.cpp  pfbneo_ui_video.h  romlist.cpp  romlist.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h  uiStateMenu.cpp  uiStateMenu.h  video.cpp  video.h
pfbneo/sources/3ds/: SDL.h
pfbneo/sources/cpu/: c68000_intf.cpp
pfbneo/sources/fbneo/: burner_sdl.h  bzip.cpp  drv.cpp  inp_c2d.cpp  input.cpp  input.h  misc.cpp  paths.cpp  retro_input.cpp  retro_input_wrapper.cpp  retro_input_wrapper.h  stringset.cpp  tchar.cpp  zipfn.cpp
pgba/: CMakeLists.txt
pgba/sources/: main.cpp  pgba_io.h  pgba_ui_emu.cpp  pgba_ui_emu.h
pgen/: CMakeLists.txt  README.MD
pgen/android/app/: build.gradle
pgen/data/common/: title.xcf
pgen/sources/: fileio.c  main.cpp  osd.c  osd.h  pgen_config.cpp  pgen_config.h  pgen_io.h  pgen_romlist.cpp  pgen_romlist.h  pgen_ui_emu.cpp  pgen_ui_emu.h  pgen_ui_menu_state.cpp  pgen_ui_menu_state.h  pgen_ui_statemenu.cpp  pgen_ui_statemenu.h  uiEmu.cpp  uiEmu.h
pnes/: CMakeLists.txt  README.MD
pnes/android/: build.gradle  settings.gradle
pnes/android/app/: build.gradle
pnes/data/common/: title.xcf
pnes/pnes/: audio.h  io.h  main.cpp  pnes_config.cpp  pnes_config.h  pnes_video.cpp  romlist.cpp  romlist.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h
pnes/pnes/epoxy/: gl.h
pnes/sources/: audio.h  io.h  main.cpp  pnes_config.cpp  pnes_config.h  pnes_io.h  pnes_ui_emu.cpp  pnes_ui_emu.h  pnes_ui_menu_state.cpp  pnes_ui_menu_state.h  pnes_ui_video.cpp  pnes_video.cpp  romlist.cpp  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h  uiStateMenu.cpp  uiStateMenu.h
pnes/sources/3ds/: SDL.h
pnes/sources/nst/: input.h  nstcommon.cpp
pnes/sources/vita/: pnes_io.h
psnes/: CMakeLists.txt  README.MD
psnes/android/: settings.gradle
psnes/android/app/: build.gradle
psnes/android/psnes/: build.gradle
psnes/data/3ds/: app.rsf
psnes/data/switch/: romlist_help.xcf
psnes/psnes/: config.cpp  config.h  main.cpp  romlist.cpp  romlist.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h  uiStateMenu.cpp  unzip_rom.cpp  unzip_rom.h  video.cpp  video.h
psnes/sources/: config.cpp  config.h  main.cpp  psnesIo.h  psnes_config.cpp  psnes_config.h  psnes_ui_emu.cpp  psnes_ui_emu.h  psnes_ui_menu_state.cpp  psnes_ui_menu_state.h  sound.cpp  sound.h  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h  uiStateMenu.cpp  uiStateMenu.h  video.cpp  video.h
src/cores/pgba/: CMakeLists.txt  README.MD  TODO.md
src/skeleton/: CMakeLists.txt  mpv.cpp  mpv.h  mpv_texture.cpp  mpv_texture.h  pemu.h  pemu_config.cpp  pemu_config.h  romlist.cpp  romlist.h  skin.cpp  skin.h  ui_emu.cpp  ui_emu.h  ui_help.cpp  ui_help.h  ui_highlight.h  ui_listbox.cpp  ui_listbox.h  ui_main.cpp  ui_main.h  ui_menu.cpp  ui_menu.h  ui_menu_state.cpp  ui_menu_state.h  ui_progressbox.cpp  ui_progressbox.h  ui_romlist.cpp  ui_romlist.h  ui_romlist_rominfo.cpp  ui_romlist_rominfo.h  ui_status_box.cpp  ui_video.cpp  ui_video.h
src/skeleton/skin/: SkinnedRectangle.cpp  SkinnedRectangle.h  SkinnedText.cpp
src/skeleton/skin_new/: skin.cpp  skin.h  skinned_listbox.cpp  skinned_listbox.h  skinned_menu.cpp  skinned_menu.h  skinned_progress_bar.cpp  skinned_progress_bar.h  skinned_rectangle.cpp  skinned_rectangle.h  skinned_sprite.cpp  skinned_sprite.h  skinned_text.cpp  skinned_text.h  skinned_widget.cpp  skinned_widget.h  variable_string.cpp  variable_string.h  xml_helper.cpp  xml_helper.h
ui/: CMakeLists.txt  c2dui.h  c2dui_config.cpp  c2dui_config.h  c2dui_config_new.cpp  c2dui_config_new.h  c2dui_listbox.cpp  c2dui_listbox.h  c2dui_option.cpp  c2dui_option.h  c2dui_option_menu.cpp  c2dui_option_menu.h  c2dui_romlist.cpp  c2dui_romlist.h  c2dui_skin.cpp  c2dui_skin.h  c2dui_status_box.cpp  c2dui_status_box.h  c2dui_ui_emu.cpp  c2dui_ui_emu.h  c2dui_ui_help.cpp  c2dui_ui_help.h  c2dui_ui_highlight.cpp  c2dui_ui_highlight.h  c2dui_ui_listbox.cpp  c2dui_ui_listbox.h  c2dui_ui_main.cpp  c2dui_ui_main.h  c2dui_ui_menu.cpp  c2dui_ui_menu.h  c2dui_ui_menu_new.cpp  c2dui_ui_menu_new.h  c2dui_ui_menu_state.cpp  c2dui_ui_menu_state.h  c2dui_ui_progressbox.cpp  c2dui_ui_progressbox.h  c2dui_ui_romlist.cpp  c2dui_ui_romlist.h  c2dui_ui_romlist_classic.cpp  c2dui_ui_romlist_classic.h  (+10 more)
ui/skin/: SkinnedRectangle.cpp  SkinnedRectangle.h  SkinnedText.cpp  SkinnedText.h
(+284 files in other folders)
